--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,4 +1,4 @@
-<footer class="common-footer">
+<footer class="footer">
     <p class="cl">
         Copyright ©ArielLiang 2017 &nbsp;&nbsp;<a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备17114651号</a>
     </p>
