--- a/layout/menu-bar.html
+++ b/layout/menu-bar.html
@@ -1,8 +1,9 @@
-<header class="common-header">
-    <div>
-        <a class="logo-href" href=""></a>
+<header class="header">
+    <div class="header-box">
+        <!-- <a class="logo-href" href=""></a> -->
         <ul class="clearfix">
             <li class="no-border"><a class="index" href="/index.html" name="index">首页</a></li>
+            <li class="no-border"><a class="blog" href="/blog.html" name="blog">博客</a></li>
         </ul>
     </div>
 </header>
