--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,46 @@
-body,html{margin:0;min-height:100%}
+body,html{margin:0;padding: 0; min-height:100%}
+body{color:#000;font:14px/1.6 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Ubuntu,Helvetica Neue,Helvetica,Arial,PingFang SC,Hiragino Sans GB,Microsoft YaHei UI,Microsoft YaHei,Source Han Sans CN,sans-serif;height:100%;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:none}
+div,ul,li,img,dl,dt,dd,h1,h2,h3,i,p{margin:0;padding:0}
+h1,h2,h3,h4,h5,h6{font-size:100%;}
+small{font-size:12px;}
+ul,ol{list-style:none;}
+fieldset,img{border:0;}
+button,input,select,textarea{font-size:100%;}
+table{border-collapse:collapse;border-spacing:0;}
+a{text-decoration: none;color:#000;}
+.clearfix{*zoom:1}
+.clearfix:before,
+.clearfix:after{display:table;content:"";line-height:0;clear:both}
+.header{width: 100%;height: 80px;overflow: hidden;border-bottom: 1px solid #eee;min-width: 1200px; position: relative; z-index: 9000;}
+.header-box{color:#fff;font-size:16px;width: 890px;height:80px;margin:0 auto; display: flex;}
+.header .actived{color:#0d8ce8;pointer-events: none;}
+.header a.logo-href{display: block;width: 215px;height: 80px;position: relative;top: 30px;background: url(../img/logo.png) no-repeat;background-size: 100%;}
+.header .clearfix a.on{color:#1e78e7;}
+.header .clearfix a{display: block;text-align: center;width: 64px;text-decoration: none;}
+.header .clearfix a:after {content:"";display: block;z-index: 2;margin-left: 50%;height: 1px;transform: translate(-50%);top: -20px;position: relative;}
+.header .clearfix a:hover:after {height: 2px;animation: ad_width_sm .5s linear forwards;background: #0d8ce8;}
+.header li{float: left;padding: 0 24px;background:#fff;height:80px;line-height:80px;}
+.footer {color:#646464;text-align: center;font-size:12px;padding: 60px;}
+.footer ul{width: 410px;margin: 0 auto;*margin-bottom:30px;}
+.footer li{float:left;margin-right:35px;margin-bottom:30px;}
+.footer a{color:#646464;text-decoration: none;}
+.footer a:hover{color:#1e78eb;text-decoration: none;}
+
+.page-index .banner{width: 100%;background: url(../img/banner.jpg) no-repeat 50% 70%; background-size: cover; padding-top: 30%;}
+@keyframes ad_width {
+    from {
+        width: 0
+    }
+    to {
+        width: 165px
+    }
+}
+
+@keyframes ad_width_sm {
+    from {
+        width: 0
+    }
+    to {
+        width: 85px
+    }
+}
