--- a/layout/menu-bar.html
+++ b/layout/menu-bar.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header-box">
-        <!-- <a class="logo-href" href=""></a> -->
+        <a class="logo-href" href=""></a>
         <ul class="clearfix">
             <li class="no-border"><a class="index" href="/index.html" name="index">首页</a></li>
             <li class="no-border"><a class="blog" href="/blog.html" name="blog">博客</a></li>
