--- a/layout/menu-bar.html
+++ b/layout/menu-bar.html
@@ -2,8 +2,7 @@
     <div class="header-box">
         <a class="logo-href" href=""></a>
         <ul class="clearfix">
-            <li class="no-border"><a class="index" href="/index.html" name="index">首页</a></li>
-            <li class="no-border"><a class="blog" href="/blog.html" name="blog">博客</a></li>
+            <li class="no-border"><a href="/index.html" name="index">home</a></li>
         </ul>
     </div>
 </header>
