--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,9 @@ a{text-decoration: none;color:#000;}
 
 
 .page-index .banner{width: 100%;background: url(../img/banner.jpg) no-repeat 50% 70%; background-size: cover; padding-top: 30%;}
+.page-index .item{width: 100px;height: 100px;padding: 60px; margin: 0 auto;}
+.page-index h1{text-align: center;font-size: 16px;color: #666;}
+.page-index p{text-align: center;font-size: 14px;color: #aaa;}
 @keyframes ad_width {
     from {
         width: 0
